# deep_materialization

./: README.md  deep_materialization_experiment.ipynb  pyproject.toml  triple_loader.py  utils.py
.ipynb_checkpoints/: ogblddi_template-checkpoint.ipynb
data/: materialized_real_abox.ntenc  materialized_real_tbox.ntenc  real_tbox.nt  real_tbox.ntenc  tiny_abox.nt  tiny_abox.ntenc  tiny_tbox.nt  tiny_tbox.ntenc
