[tool.poetry]
name = "deep_materialization"
version = "0.1.0"
description = ""
authors = ["brurucy <rucy.carneiro@pipedrive.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.1"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
